feat: added middleware auth in courier rates
